--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,9 +1,10 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=/Users/macuser/Documents/Flutter/SDK/flutter
 FLUTTER_APPLICATION_PATH=/Users/macuser/Documents/Flutter/Projects/flutter_udemy_learn_section4_app1
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=/Users/macuser/Documents/Flutter/Projects/flutter_udemy_learn_section4_app1/lib/main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build/ios
 FLUTTER_FRAMEWORK_DIR=/Users/macuser/Documents/Flutter/SDK/flutter/bin/cache/artifacts/engine/ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
+TRACK_WIDGET_CREATION=true
